--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Felipe Diniz",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.0.0"
   },
   "devDependencies": {
